{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 44,
  "lineage": "38b3e7a6-0fcc-5c8a-3290-74e28cebf161",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:283864186978:internet-gateway/igw-00154677a7822f106",
            "id": "igw-00154677a7822f106",
            "owner_id": "283864186978",
            "tags": {
              "Name": "multiverse"
            },
            "tags_all": {
              "Name": "multiverse"
            },
            "vpc_id": "vpc-0da8f2f1e76c60a14"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:283864186978:loadbalancer/app/mvws920230921091907252000000009/446f0d464189be97",
            "arn_suffix": "app/mvws920230921091907252000000009/446f0d464189be97",
            "desync_mitigation_mode": "defensive",
            "dns_name": "mvws920230921091907252000000009-71686633.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:283864186978:loadbalancer/app/mvws920230921091907252000000009/446f0d464189be97",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mvws920230921091907252000000009",
            "name_prefix": "mvws9",
            "preserve_host_header": false,
            "security_groups": [
              "sg-06a22d147c8543f0c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01aefd557626e19e1"
              },
              {
                "subnet_id": "subnet-07913d0d23c1f74d1"
              }
            ],
            "subnets": [
              "subnet-01aefd557626e19e1",
              "subnet-07913d0d23c1f74d1"
            ],
            "tags": {
              "Name": "multiverse"
            },
            "tags_all": {
              "Name": "multiverse"
            },
            "vpc_id": "vpc-0da8f2f1e76c60a14",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.eu_west_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:283864186978:listener/app/mvws920230921091907252000000009/446f0d464189be97/81b3eca56afeaed3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:283864186978:targetgroup/mvws920230921091906080800000007/5fc2d427b75025d0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:283864186978:listener/app/mvws920230921091907252000000009/446f0d464189be97/81b3eca56afeaed3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:283864186978:loadbalancer/app/mvws920230921091907252000000009/446f0d464189be97",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.this",
            "aws_lb_target_group.http",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.eu_west_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:283864186978:targetgroup/mvws920230921091906080800000007/5fc2d427b75025d0",
            "arn_suffix": "targetgroup/mvws920230921091906080800000007/5fc2d427b75025d0",
            "connection_termination": false,
            "deregistration_delay": "0",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:283864186978:targetgroup/mvws920230921091906080800000007/5fc2d427b75025d0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "mvws920230921091906080800000007",
            "name_prefix": "mvws9",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0da8f2f1e76c60a14"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00154677a7822f106",
            "id": "r-rtb-0fb09038fcf4df3981080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fb09038fcf4df398",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:283864186978:route-table/rtb-0fb09038fcf4df398",
            "id": "rtb-0fb09038fcf4df398",
            "owner_id": "283864186978",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00154677a7822f106",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "multiverse-public"
            },
            "tags_all": {
              "Name": "multiverse-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da8f2f1e76c60a14"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b33d78210fb42da",
            "route_table_id": "rtb-0fb09038fcf4df398",
            "subnet_id": "subnet-01aefd557626e19e1"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.eu_west_2"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074a3f7166c2bbdb5",
            "route_table_id": "rtb-0fb09038fcf4df398",
            "subnet_id": "subnet-07913d0d23c1f74d1"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.eu_west_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:283864186978:security-group/sg-06a22d147c8543f0c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b412fa08852b33d3"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-06a22d147c8543f0c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "mvws9-alb20230921091906075500000005",
            "name_prefix": "mvws9-alb",
            "owner_id": "283864186978",
            "revoke_rules_on_delete": true,
            "tags": {
              "Name": "multiverse-alb"
            },
            "tags_all": {
              "Name": "multiverse-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da8f2f1e76c60a14"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:283864186978:security-group/sg-0b412fa08852b33d3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0b412fa08852b33d3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06a22d147c8543f0c"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "mvws9-ec220230921091906083200000008",
            "name_prefix": "mvws9-ec2",
            "owner_id": "283864186978",
            "revoke_rules_on_delete": true,
            "tags": {
              "Name": "multiverse-ec2"
            },
            "tags_all": {
              "Name": "multiverse-ec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da8f2f1e76c60a14"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_from_web_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1176821677",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06a22d147c8543f0c",
            "security_group_rule_id": "sgr-0294db5675efb9239",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_to_ec2_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 80,
            "id": "sgrule-1798702363",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06a22d147c8543f0c",
            "security_group_rule_id": "sgr-069aafe124307caa3",
            "self": false,
            "source_security_group_id": "sg-0b412fa08852b33d3",
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ec2",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2_from_alb_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 80,
            "id": "sgrule-3507037061",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b412fa08852b33d3",
            "security_group_rule_id": "sgr-075f957bd39467eb1",
            "self": false,
            "source_security_group_id": "sg-06a22d147c8543f0c",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ec2",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2_to_web_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3612796236",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b412fa08852b33d3",
            "security_group_rule_id": "sgr-07d4e30e3d65284b6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:283864186978:subnet/subnet-01aefd557626e19e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01aefd557626e19e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "283864186978",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "multiverse-1"
            },
            "tags_all": {
              "Name": "multiverse-1"
            },
            "vpc_id": "vpc-0da8f2f1e76c60a14"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.eu_west_2"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:283864186978:subnet/subnet-07913d0d23c1f74d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07913d0d23c1f74d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "283864186978",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "multiverse-2"
            },
            "tags_all": {
              "Name": "multiverse-2"
            },
            "vpc_id": "vpc-0da8f2f1e76c60a14"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.eu_west_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:283864186978:vpc/vpc-0da8f2f1e76c60a14",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-076f438ab5ac6811d",
            "default_route_table_id": "rtb-04b12df7bf420be22",
            "default_security_group_id": "sg-02956cb81ae0c3be1",
            "dhcp_options_id": "dopt-0d1535c56cb9d74b6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0da8f2f1e76c60a14",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04b12df7bf420be22",
            "owner_id": "283864186978",
            "tags": {
              "Name": "multiverse"
            },
            "tags_all": {
              "Name": "multiverse"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:283864186978:vpc-endpoint/vpce-0d068d7590247b439",
            "cidr_blocks": [
              "52.95.150.0/24",
              "52.95.191.0/24",
              "52.95.142.0/23",
              "16.12.16.0/23",
              "3.5.244.0/22",
              "52.219.219.0/24",
              "52.95.144.0/24",
              "52.95.148.0/23",
              "16.12.15.0/24"
            ],
            "id": "vpce-0d068d7590247b439",
            "owner_id": "283864186978",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-7ca54015",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0fb09038fcf4df398"
            ],
            "service_name": "com.amazonaws.eu-west-2.s3",
            "state": "available",
            "tags": {
              "Name": "multiverse"
            },
            "tags_all": {
              "Name": "multiverse"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0da8f2f1e76c60a14"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    }
  ]
}